// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the component if no mouseover event on child 1`] = `
<span
  class="TooltipContainer"
>
  <span>
    Hover me
  </span>
</span>
`;

exports[`renders the component 1`] = `
<span
  class="TooltipContainer"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component as span with a id attribute 1`] = `
<span
  class="TooltipContainer"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a id attribute 1`] = `
<span
  class="TooltipContainer"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a place attribute 1`] = `
<span
  class="TooltipContainer"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a target wrapper classname 1`] = `
<span
  class="TooltipContainer target-wrapper-class-name"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
<span
  class="TooltipContainer"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;
